--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "url": "http://github.com/jo",
     "email": "schmidt@netzmerk.com"
   },
-  "version": "0.0.1",
+  "version": "0.1.0",
   "dependencies": {
     "request": "*",
-    "worker-attachments": "*",
-    "underscore": ">=1.3.3",
-    "CouchDBChanges": ">=0.0.3"
+    "worker-attachments": "0.1.0",
+    "underscore": ">=1.3.3"
   },
   "devDependencies": {
     "mocha": "*"
