--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "worker-generate-thumbnails",
-  "description": "Hoodie worker which generates image thumbnails.",
+  "description": "CouchDB Worker which generates image thumbnails.",
   "author": {
     "name": "Johannes J. Schmidt",
     "url": "http://github.com/jo",
     "email": "schmidt@netzmerk.com"
   },
-  "version": "0.2.0",
+  "version": "0.3.0",
   "dependencies": {
     "request": "*",
-    "worker-attachments": ">=0.2.1"
+    "underscore": "*",
+    "couchdb-worker": "=0.4.1"
   },
   "scripts": {
     "start": "node index.js"
