--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "http://github.com/jo",
     "email": "schmidt@netzmerk.com"
   },
-  "version": "0.4.1",
+  "version": "0.4.2"
   "dependencies": {
     "request": "*",
     "underscore": "*",
