--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "worker-generate-thumbnails",
   "version": "0.4.6",
   "description": "CouchDB Worker which generates image thumbnails.",
-  "keywords": ["CouchDB", "attchments", "worker", "convert", "imagemagick", "image", "thumbnail"],
+  "keywords": ["CouchDB", "attachments", "couchdb-worker", "worker", "convert", "imagemagick", "image", "thumbnail"],
   "homepage": "https://github.com/null2/worker-generate-thumbnails",
   "bugs": {
     "url" : "http://github.com/null2/worker-generate-thumbnails/issues",
